--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta charset="utf-8">
+  <meta name="JS Calculator" content="Calculator">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>JS Calculator</title>
+</head>
+
+
 </html>
