--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
   <title>JS Calculator</title>
 </head>
 <body>
-  
-  <div id='num7'></div>
-  <div id='num8'></div>
-  <div id='num9'></div>
-  <div id='num4'></div>
-  <div id='num5'></div>
-  <div id='num6'></div>
-  <div id='num1'></div>
-  <div id='num2'></div>
-  <div id='num3'></div>
-  <div id='num0'></div>
-  <div id='decimal'></div>
-  <div id='equals'></div>
+  <div class ="grid-container">
+    <div id='num7'></div>
+    <div id='num8'></div>
+    <div id='num9'></div>
+    <div id='num4'></div>
+    <div id='num5'></div>
+    <div id='num6'></div>
+    <div id='num0'></div>
+    <div id='num1'></div>
+    <div id='num2'></div>
+    <div id='num3'></div>
+    <div id='decimal'></div>
+    <div id='equals'></div>
+  </div>
 
 <script src="script.js"></script>
 </body>
