Grid height and width set WIP

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 <body>
   <div class ="grid-container">
-    <div id='num7'></div>
-    <div id='num8'></div>
-    <div id='num9'></div>
-    <div id='num4'></div>
-    <div id='num5'></div>
-    <div id='num6'></div>
-    <div id='num0'></div>
-    <div id='num1'></div>
-    <div id='num2'></div>
-    <div id='num3'></div>
-    <div id='decimal'></div>
-    <div id='equals'></div>
+    <div id='num7'>7</div>
+    <div id='num8'>8</div>
+    <div id='num9'>9</div>
+    <div id='num4'>4</div>
+    <div id='num5'>5</div>
+    <div id='num6'>6</div>
+    <div id='num0'>0</div>
+    <div id='num1'>1</div>
+    <div id='num2'>2</div>
+    <div id='num3'>3</div>
+    <div id='decimal'>.</div>
+    <div id='equals'>=</div>
   </div>
 
 <script src="script.js"></script>
