--- a/index.html
+++ b/index.html
@@ -8,20 +8,26 @@
   <title>JS Calculator</title>
 </head>
 <body>
+  <center>
   <div class ="grid-container">
     <div id='num7'>7</div>
     <div id='num8'>8</div>
     <div id='num9'>9</div>
+    <div id='divide'>/</div>
     <div id='num4'>4</div>
     <div id='num5'>5</div>
     <div id='num6'>6</div>
-    <div id='num0'>0</div>
+    <div id='multiply'>X</div>
     <div id='num1'>1</div>
     <div id='num2'>2</div>
     <div id='num3'>3</div>
+    <div id='minus'>-</div>
+    <div id='num0'>0</div>
     <div id='decimal'>.</div>
     <div id='equals'>=</div>
+    <div id='add'>+</div>
   </div>
+  </center>
 
 <script src="script.js"></script>
 </body>
