--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 <body>
   <center>
   <div class ="grid-container">
-    <div id='num7'>7</div>
-    <div id='num8'>8</div>
-    <div id='num9'>9</div>
-    <div id='divide'>/</div>
-    <div id='num4'>4</div>
-    <div id='num5'>5</div>
-    <div id='num6'>6</div>
-    <div id='multiply'>X</div>
-    <div id='num1'>1</div>
-    <div id='num2'>2</div>
-    <div id='num3'>3</div>
-    <div id='minus'>-</div>
-    <div id='num0'>0</div>
-    <div id='decimal'>.</div>
-    <div id='equals'>=</div>
-    <div id='add'>+</div>
+    <div class='unit' id='num7'>7</div>
+    <div class='unit' id='num8'>8</div>
+    <div class='unit' id='num9'>9</div>
+    <div class='unit' id='divide'>/</div>
+    <div class='unit' id='num4'>4</div>
+    <div class='unit' id='num5'>5</div>
+    <div class='unit' id='num6'>6</div>
+    <div class='unit' id='multiply'>X</div>
+    <div class='unit' id='num1'>1</div>
+    <div class='unit' id='num2'>2</div>
+    <div class='unit' id='num3'>3</div>
+    <div class='unit' id='minus'>-</div>
+    <div class='unit' id='num0'>0</div>
+    <div class='unit' id='decimal'>.</div>
+    <div class='unit' id='equals'>=</div>
+    <div class='unit' id='add'>+</div>
   </div>
   </center>
 
