--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <center>
   <div class ="grid-container">
+    <div class='unit' id='resultScreen'></div>
     <div class='unit' id='num7'>7</div>
     <div class='unit' id='num8'>8</div>
     <div class='unit' id='num9'>9</div>
