--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>JS Calculator</title>
+  <style>
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
+</style>
 </head>
 <body>
   <center>
