--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="styles.css">
   <title>JS Calculator</title>
   <style>
-@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
-</style>
+  @import url('https://fonts.googleapis.com/css?family=Roboto');
+  </style>
 </head>
 <body>
   <center>
